# homepy

./: .envrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  main.py  pyproject.toml  run_tests.sh
.claude/: settings.local.json
.devcontainer/: Dockerfile  init-firewall.sh
.github/workflows/: release.yml
homepy/: __init__.py  app.py  home.py
homepy/resources/: __init__.py  base.py  package.py  shell.py  symlink.py  template.py
pyhomedot/: __init__.py  color.py  home.py
pyhomedot/resources/: __init__.py  base.py  package.py  shell.py  symlink.py  template.py
tests/: conftest.py  test_cli.py  test_home.py  test_integration.py  test_package.py  test_shell.py  test_symlink.py  test_template.py
