[project]
name = "homepy"
version = "0.2.11"
description = ""
authors = [
    {name = "Nicholas Zolton",email = "nmisc@zolton.me"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "typer (>=0.16.0,<0.17.0)",
    "rich (>=14.0.0,<15.0.0)"
]

[project.optional-dependencies]
test = [
    "pytest (>=8.0.0,<9.0.0)",
    "testcontainers (>=4.8.0,<5.0.0)"
]

[tool.poetry.scripts]
homepy = "homepy.app:app"

[tool.poetry.group.dev.dependencies]
httpx = "^0.28.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
