[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyhomedot"
version = "1.7.0"
description = "A simple Python library for creating and managing your configuration files"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_message = "chore(release): v{version}"
tag_format = "v{version}"
